--- a/otreeutils/templates/otreeutils/ExtendedPage1.html
+++ b/otreeutils/templates/otreeutils/ExtendedPage1.html
@@ -1,6 +1,6 @@
 {% extends "global/Base.html" %}
 {% load i18n %}
-{% load floppyforms staticfiles otree_tags %}
+{% load floppyforms staticfiles otree %}
 
 {% block body_main %}
     <div class="container" style='max-width:970px'>
