--- a/otreeutils/templates/otreeutils/SurveyPage.html
+++ b/otreeutils/templates/otreeutils/SurveyPage.html
@@ -1,6 +1,6 @@
 {% extends extended_page_tpl %}
 
-{% load staticfiles otree_tags %}
+{% load staticfiles otree %}
 
 {% block app_styles %}
 <link href="{% static 'otreeutils/understanding.css' %}" rel="stylesheet" type="text/css">
