adding one-shot game for players who are not matched

--- a/coopetition_mturk/templates/coopetition_mturk/StartPage.html
+++ b/coopetition_mturk/templates/coopetition_mturk/StartPage.html
@@ -29,6 +29,12 @@
             Your decision is submitted only after you click "Submit".</strong>
     </p>
 
+
+    <p style="text-align:center">
+        At the bottom of the page, there will be a history table showing all the decisions have been made by you and
+        the other participant.
+    </p>
+
 </div>
 <br/>
 <div style="text-align:right">
