--- a/coopetition_mturk/templates/coopetition_mturk/WaitingInfo.html
+++ b/coopetition_mturk/templates/coopetition_mturk/WaitingInfo.html
@@ -24,7 +24,8 @@
 
 <hr>
 <p style="font-size:16px">
-While you are waiting, below is some information about the experiment that you can review.
+While you are waiting, below is some information about the experiment that you can review, and you can think about how you
+    will make decisions.
 </p>
 <p>
     During your interaction with the other participant, the following experimental interface will be
