--- a/coopetition_quiz/templates/coopetition_quiz/Instructions.html
+++ b/coopetition_quiz/templates/coopetition_quiz/Instructions.html
@@ -26,7 +26,8 @@ Instructions: Part 1
 
 <div>
     <p>
-        In this part, there will be 10 rounds of decision-making. You will be matched with another participant.
+        In this part, there will be 10 rounds of decision-making. You will be matched with another participant to play
+        an investment game.
         You will play with the same participant for all 10 rounds.
     </p>
 
@@ -92,24 +93,24 @@ Instructions: Part 1
         In general, putting more points in the <i>Investment Account</i> (a higher \(x_1\))  <strong>generates a higher total return</strong>
         , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\)) <strong>increases your share of the total return</strong>.
     </p>
-    <p>
-        In summary, your and the other participant’s earnings can be broken down as follows:
-    </p>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(x_1x_2\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>
-        </tr>
-    </table>
+    <!--<p>-->
+        <!--In summary, your and the other participant’s earnings can be broken down as follows:-->
+    <!--</p>-->
+    <!--<table>-->
+        <!--<tr>-->
+            <!--<th></th>-->
+            <!--<th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>-->
+            <!--<th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>-->
+            <!--<td rowspan="2">\(x_1x_2\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>-->
+            <!--<td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}x_1 x_2+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+    <!--</table>-->
 </div>
 {% endif %}
 
@@ -139,24 +140,24 @@ Instructions: Part 1
         In general, putting more points in the <i>Investment Account</i> (a higher \(x_1\)) <strong>generates a higher total return</strong>
         , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\)) <strong>increases your share of the total return</strong>.
     </p>
-    <p>
-        In summary, your and the other participant’s earnings can be broken down as follows:
-    </p>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(x_1x_2+60\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}(x_1 x_2 + 60)+10-x_1-y_1\)</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}(x_1 x_2 + 60)+10-x_1-y_1\)</td>
-        </tr>
-    </table>
+    <!--<p>-->
+        <!--In summary, your and the other participant’s earnings can be broken down as follows:-->
+    <!--</p>-->
+    <!--<table>-->
+        <!--<tr>-->
+            <!--<th></th>-->
+            <!--<th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>-->
+            <!--<th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>-->
+            <!--<td rowspan="2">\(x_1x_2+60\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}(x_1 x_2 + 60)+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>-->
+            <!--<td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td><td>\(\displaystyle \frac{y_1}{y_1 + y_2}(x_1 x_2 + 60)+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+    <!--</table>-->
 </div>
 {% endif %}
 
@@ -206,26 +207,26 @@ Instructions: Part 1
         In general, putting more points in the <i>Investment Account</i> (a higher \(x_1\))  <strong>generates a higher total return</strong>
         , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\))  <strong>increases your share of the total return</strong>.
     </p>
-    <p>
-        In summary, your and the other participant’s earnings can be broken down as follows:
-    </p>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(\overbrace{2x_1x_2}^{rand \le 100}\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{2x_1x_2}^{rand \le 100}+10-x_1-y_1\)</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{2x_1x_2}^{rand \le 100}+10-x_1-y_1\)</td>
-        </tr>
-    </table>
+    <!--<p>-->
+        <!--In summary, your and the other participant’s earnings can be broken down as follows:-->
+    <!--</p>-->
+    <!--<table>-->
+        <!--<tr>-->
+            <!--<th></th>-->
+            <!--<th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>-->
+            <!--<th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>-->
+            <!--<td rowspan="2">\(\overbrace{2x_1x_2}^{rand \le 100}\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{2x_1x_2}^{rand \le 100}+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>-->
+            <!--<td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{2x_1x_2}^{rand \le 100}+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+    <!--</table>-->
 </div>
 {% endif %}
 
@@ -275,26 +276,26 @@ Instructions: Part 1
         In general, putting more points in the <i>Investment Account</i> (a higher \(x_1\)) <strong>generates a higher total return</strong>
         , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\))  <strong>increases your share of the total return</strong>.
     </p>
-    <p>
-        In summary, your and the other participant’s earnings can be broken down as follows:
-    </p>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(\overbrace{2x_1x_2}^{rand \le 100}+60\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{2x_1x_2}^{rand \le 100}+ 60)+10-x_1-y_1\)</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{2x_1x_2}^{rand \le 100} + 60)+10-x_1-y_1\)</td>
-        </tr>
-    </table>
+    <!--<p>-->
+        <!--In summary, your and the other participant’s earnings can be broken down as follows:-->
+    <!--</p>-->
+    <!--<table>-->
+        <!--<tr>-->
+            <!--<th></th>-->
+            <!--<th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>-->
+            <!--<th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>-->
+            <!--<td rowspan="2">\(\overbrace{2x_1x_2}^{rand \le 100}+60\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{2x_1x_2}^{rand \le 100}+ 60)+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>-->
+            <!--<td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{2x_1x_2}^{rand \le 100} + 60)+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+    <!--</table>-->
 </div>
 {% endif %}
 
@@ -341,26 +342,26 @@ Instructions: Part 1
         <strong>makes it more likely to receive a successful investment and a higher total return</strong>
         , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\))  <strong>increases your share of the total return</strong>.
     </p>
-    <p>
-        In summary, your and the other participant’s earnings can be broken down as follows:
-    </p>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(\overbrace{200}^{rand \le x_1x_2}+60\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{200}^{rand \le x_1x_2}+ 60)+10-x_1-y_1\)</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{200}^{rand \le x_1x_2} + 60)+10-x_1-y_1\)</td>
-        </tr>
-    </table>
+    <!--<p>-->
+        <!--In summary, your and the other participant’s earnings can be broken down as follows:-->
+    <!--</p>-->
+    <!--<table>-->
+        <!--<tr>-->
+            <!--<th></th>-->
+            <!--<th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>-->
+            <!--<th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>-->
+            <!--<td rowspan="2">\(\overbrace{200}^{rand \le x_1x_2}+60\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{200}^{rand \le x_1x_2}+ 60)+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>-->
+            <!--<td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}(\overbrace{200}^{rand \le x_1x_2} + 60)+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+    <!--</table>-->
 </div>
 {% endif %}
 
@@ -407,32 +408,32 @@ Instructions: Part 1
         <strong>makes it more likely to receive a successful investment and a higher total return</strong>
         , while putting more points in the <i>Rationing Account</i> (a higher \(y_1\))  <strong>increases your share of the total return</strong>.
     </p>
-    <p>
-        In summary, your and the other participant’s earnings can be broken down as follows:
-    </p>
-    <table>
-        <tr>
-            <th></th>
-            <th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>
-            <th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>
-        </tr>
-        <tr>
-            <th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>
-            <td rowspan="2">\(\overbrace{200}^{rand \le x_1x_2}\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{200}^{rand \le x_1x_2}+10-x_1-y_1\)</td>
-        </tr>
-        <tr>
-            <th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>
-            <td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>
-            <td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{200}^{rand \le x_1x_2}+10-x_1-y_1\)</td>
-        </tr>
-    </table>
+    <!--<p>-->
+        <!--In summary, your and the other participant’s earnings can be broken down as follows:-->
+    <!--</p>-->
+    <!--<table>-->
+        <!--<tr>-->
+            <!--<th></th>-->
+            <!--<th>Investment Account</th><th>Rationing Account</th><th>Kept to oneself</th>-->
+            <!--<th>Total Return</th><th>Share of Total Return</th><th>Final Earnings</th>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>You</th><td>\(x_1\)</td><td>\(y_1\)</td><td>\(10-x_1-y_1\)</td>-->
+            <!--<td rowspan="2">\(\overbrace{200}^{rand \le x_1x_2}\)</td><td> \(\displaystyle \frac{y_1}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{200}^{rand \le x_1x_2}+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<th>Other</th><td>\(x_2\)</td><td>\(y_2\)</td><td>\(10-x_2-y_2\)</td>-->
+            <!--<td>\(\displaystyle \frac{y_2}{y_1 + y_2} \)</td>-->
+            <!--<td>\(\displaystyle \frac{y_1}{y_1 + y_2}\overbrace{200}^{rand \le x_1x_2}+10-x_1-y_1\)</td>-->
+        <!--</tr>-->
+    <!--</table>-->
 </div>
 {% endif %}
 
-<br/>
-<p>To help you understand the experiment, we will go through some examples.</p>
-<br/>
+<!--<br/>-->
+<!--<p>To help you understand the experiment, we will go through some examples.</p>-->
+<!--<br/>-->
 <div style="text-align:right">
     {% next_button %}
 </div>
