--- a/coopetition_quiz/templates/coopetition_quiz/StartPage.html
+++ b/coopetition_quiz/templates/coopetition_quiz/StartPage.html
@@ -20,14 +20,15 @@
 
 
 <p style="font-size:16px">
-        This experiment consists of several part and will take approximately 30 minutes. We will now go through the instructions for Part I.
+        This experiment consists of several part and will take approximately 30 minutes.
+    We will now go through the instructions for Part I.
 </p>
 
 <p style="font-size:16px">
     At the end of these instructions, you will be asked to take a quiz to ensure that you understand the instructions.
     <strong> You have three chances to answer all the questions correctly. </strong>
         If it takes you more than 3 attempts to answer all the questions correctly, you will not be allowed to participate in
-        the experiment and will not receive payment for the HIT.
+        the experiment and will not receive the payment for the HIT.
     </p>
 
     <p>
