--- a/payment_online/templates/payment_online/PaymentInfo.html
+++ b/payment_online/templates/payment_online/PaymentInfo.html
@@ -11,7 +11,7 @@
 <p>This is the end of the experiment. Thank you for your participation.</p>
 <p>Your flat payment fee is {{participation_fee}}.</p>
 <p>You bonus earnings in the experiment is {{experiment_payoff}}, which is {{payment}}.</p>
-<p><strong> You final payment of the experiment is  {{final_payment}}.</strong> </p>
+<p><strong> You final payment of the experiment is  {{final_payment}}</strong> </p>
 {% else %}
 <p>This is the end of the experiment. </p>
 {% endif %}
