changing small things before running experiment

--- a/coopetition_mturk/templates/coopetition_mturk/Decision.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Decision.html
@@ -35,6 +35,7 @@
 </div>
 
 <br/>
+{% if player.interaction_number == 1 and player.round_number <= 5  %}
 <p style="font-size:16px">
     Note:
     The experiment proceeds as fast as the slower participant, so please submit your decisions in a prompt manner.
@@ -51,6 +52,7 @@
     <strong>Remember to submit once you reach your decision.
         Your decision is submitted only after you click "Submit".</strong>
 </p>
+{% endif%}
 
 <br/>
 {% include Constants.history_template %}
