--- a/coopetition_quiz/templates/coopetition_quiz/Instructions.html
+++ b/coopetition_quiz/templates/coopetition_quiz/Instructions.html
@@ -62,9 +62,7 @@ Instructions: Part 1
     </table>
 
     <p></p>
-    <p>That is, you put \(x_1\) points in the <i>Investment Account</i>, \(y_1\) points in the <i>Rationing Account</i>,
-        and keep the rest \(10-x_1-y_1\) points; the other participant put \(x_2\) points in the <i>Investment Account</i>, \(y_2\) points in the <i>Rationing Account</i>,
-        and keep the rest \(10-x_2-y_2\) points. Your earnings is calculated as follows:</p>
+    <p>Your earnings is calculated as follows:</p>
 </div>
 
 {% if player.treatment == "Det0_60" %}
