--- a/coopetition_quiz/templates/coopetition_quiz/QuizInfo.html
+++ b/coopetition_quiz/templates/coopetition_quiz/QuizInfo.html
@@ -1,6 +1,4 @@
 {% load staticfiles otree %}
-
-
 {% block content %}
 
 <p>
@@ -16,6 +14,10 @@ the experiment and will not receive any payment for the HIT.
     Note that <strong>each time you click "Check my answer" would count as one of your attempts.</strong>
 </p>
 <p>The information and examples of the experiment are shown below to help you complete the quiz.</p>
+
+<p>
+<strong>You have at most 10 minutes to finish the quiz.</strong>
+</p>
 {% endblock %}
 
 
