--- a/risk_preferences/templates/risk_preferences/Decision.html
+++ b/risk_preferences/templates/risk_preferences/Decision.html
@@ -19,6 +19,17 @@ Part 3: Additional task for you to earn money
     and 2) which of the two possible events occur.
 </p>
 
+<ul>
+    <li>
+    Gamble 1 is the safe gamble, which guarantees to bring you {{ Constants.outcomesA.0 }} points.
+    </li>
+    <li>
+    As the number of the gamble increases, you can earn an increasingly higher payoff if Event B occurs,
+    but a lower payoff if Event A occurs.
+    </li>
+</ul>
+
+
     For example:
 <ul>
     <li>
@@ -30,6 +41,8 @@ Part 3: Additional task for you to earn money
         If Event B occurs, you will earn {{ Constants.outcomesB.4 }} points.
     </li>
 </ul>
+
+
 
 <p>
     To determine which event occurs, after you have made your decision, the computer randomly generate a number from 1 to 10, with equal probability.
