--- a/coopetition_mturk/templates/coopetition_mturk/Introduction.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Introduction.html
@@ -14,49 +14,82 @@ Introduction: Part 2
 </p>
 <p>
 The situation in Part 2 is quite similar to Part 1. This part differs from Prat 1 only in that
+</p>
+
     {% if player.condition == "Det" and player.A == 60 %}
-    <strong>the total return from the investment now is \(x_1x_2+60\)</strong> instead of \(x_1x_2\).
+<p style="text-align:center">
+    <strong>the total return from the investment now is \(x_1x_2+60\),</strong> instead of \(x_1x_2\).
+</p>
+<p>
     That is, the total return from the investment is 60 points more than before.
+</p>
     {% endif %}
     {% if player.condition == "Det" and player.A == 0 %}
-    <strong>the total return from the investment now is \(x_1x_2\)</strong> instead of \(x_1x_2+60\).
+<p style="text-align:center">
+    <strong>the total return from the investment now is \(x_1x_2\),</strong> instead of \(x_1x_2+60\).
+</p>
+<p>
     That is, the total return from the investment is 60 points less than before.
+</p>
     {% endif %}
 
     {% if player.condition == "Fix" and player.A == 60 %}
+<p style="text-align:center">
     <strong>the total return from the investment now is
-        \(\overbrace{200}^{rand \le x_1x_2}+60\)
+        \(\overbrace{200}^{rand \le x_1x_2}+60\),
         </strong> instead of
     \(\overbrace{200}^{rand \le x_1x_2}\).
+</p>
+<p>
     That is, the total return is \(2x_1x_2+60\) points if the investment is a success, and 60 points if the investment is a failure.
+</p>
+<p>
     The total return from the investment is therefore 60 points more than before, whether the investment is a success or not.
     {% endif %}
 
     {% if player.condition == "Fix" and player.A == 0 %}
+<p style="text-align:center">
     <strong>the total return from the investment now is
-        \(\overbrace{2x_1x_2}^{rand \le 100}\)
+        \(\overbrace{2x_1x_2}^{rand \le 100}\),
     </strong> instead of
     \(\overbrace{2x_1x_2}^{rand \le 100}+60\).
+</p>
+<p>
     That is, the total return is \(2x_1x_2\) points if the investment is a success, and 0 point if the investment is a failure.
-
+</p>
+<p>
     The total return from the investment is therefore 60 points less than before, whether the investment is a success or not.
+<p>
     {% endif %}
 
     {% if player.condition == "Var" and player.A == 60 %}
+
+<p style="text-align:center">
     <strong>the total return from the investment now is
-        \(\overbrace{110}^{rand \le x_1x_2}+60\)
-    </strong> instead of
+        \(\overbrace{110}^{rand \le x_1x_2}+60\),
+    </strong>
+    instead of
     \(\overbrace{110}^{rand \le x_1x_2}\).
+</p>
+<p>
     That is, the total return is 170 points if the investment is a success, and 60 points if the investment is a failure.
+</p>
+<p>
     The total return from the investment is therefore 60 points more than before, whether the investment is a success or not.
+</p>
     {% endif %}
 
     {% if player.condition == "Var" and player.A == 0 %}
+<p style="text-align:center">
     <strong>the total return from the investment now is
-        \(\overbrace{110}^{rand \le x_1x_2}+60\)
+        \(\overbrace{110}^{rand \le x_1x_2}\),
     </strong> instead of
-    \(\overbrace{110}^{rand \le x_1x_2}\).
+    \(\overbrace{110}^{rand \le x_1x_2}+60\).
+</p>
+<p>
     That is, the total return is 110 points if the investment is a success, and 0 point if the investment is a failure.
+</p>
+<p>
     The total return from the investment is therefore 60 points less than before, whether the investment is a success or not.
     {% endif %}
 </p>
