adding participaiton code, different way of running MTurk experiment

--- a/coopetition_mturk/templates/coopetition_mturk/StartPage.html
+++ b/coopetition_mturk/templates/coopetition_mturk/StartPage.html
@@ -8,14 +8,13 @@
 <div>
     <p style="text-align:center">
        <strong>
-           You have just been matched with another participant, and you will start to interact with this participant to earn bonus.
+           You have just been matched with another participant.
        </strong>
     </p>
 
     <p style="font-size:16px">
         Note: The experiment proceeds as fast as the slower participant.
-        If both participants make prompt decisions quickly, the experiment can be finished quickly.
-        Therefore, please keep focused and submit your decisions in a timely manner.
+        The experiment can be finished quickly, if you keep focused and submit your decisions in a timely manner.
     </p>
 
     <p>
