getting ready for MTruk, participation label

--- a/payment_online/templates/payment_online/PaymentInfo.html
+++ b/payment_online/templates/payment_online/PaymentInfo.html
@@ -13,9 +13,9 @@
 <p>You bonus earnings in the experiment is {{experiment_payoff}}, which is {{payment}}.</p>
 <p><strong> You final payment of the experiment is  {{final_payment}}</strong> </p>
 
-<p>Please provide the following participation label to the MTurk HIT in order to receive credit for
+<p>Please provide the following participation code to the MTurk HIT in order to receive credit for
 taking the experiment. </p>
-<p style="text-align:center"> <strong> Your participation label: {{participant.label}}</strong> </p>
+<p style="text-align:center"> <strong> Your participation code: {{participant.code}}</strong> </p>
 
 {% else %}
 <p>This is the end of the experiment. </p>
