--- a/payment_online/templates/payment_online/PaymentInfo.html
+++ b/payment_online/templates/payment_online/PaymentInfo.html
@@ -13,6 +13,10 @@
 <p>You bonus earnings in the experiment is {{experiment_payoff}}, which is {{payment}}.</p>
 <p><strong> You final payment of the experiment is  {{final_payment}}</strong> </p>
 
+
+{% formfield player.Workerid label="To facilitate payment, please paste your MTurk Worker ID:" %}
+
+
 <p>Please provide the following participation code to the MTurk HIT in order to receive credit for
 taking the experiment. </p>
 <p style="text-align:center"> <strong> Your participation code: {{participant.code}}</strong> </p>
