--- a/payment_online/templates/payment_online/PaymentInfo.html
+++ b/payment_online/templates/payment_online/PaymentInfo.html
@@ -17,7 +17,7 @@
 {% formfield player.Workerid label="To facilitate payment, please paste your MTurk Worker ID:" %}
 
 
-<p>Please provide the following participation code to the MTurk HIT in order to receive credit for
+<p><strong>IMPORTANT:</strong> Please provide the following participation code to the MTurk HIT in order to receive credit for
 taking the experiment. </p>
 <p style="text-align:center"> <strong> Your participation code: {{participant.code}}</strong> </p>
 
